<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="CGN_DATAMAN" Id="{d8decc23-0454-4a66-90b2-41effa600875}">
    <Declaration><![CDATA[TYPE CGN_DATAMAN :
STRUCT
	{attribute addProperty Name "<#AcquisitionControlModule#>"}
	AcquisitionControlModule:AcquisitionControlModuleStruct;
	{attribute addProperty Name "<#AcquisitionStatusModule#>"}
	AcquisitionStatusModule:AcquisitionStatusModuleStruct;
	{attribute addProperty Name "<#ResultsControlModule#>"}
	ResultsControlModule:ResultsControlModuleStruct;
	{attribute addProperty Name "<#ResultsStatusModule#>"}
	ResultsStatusModule:ResultsStatusModuleStruct;
	{attribute addProperty Name "<#SoftEventControlModule#>"}
	SoftEventControlModule:SoftEventControlModuleStruct;
	{attribute addProperty Name "<#UserDataModule#>"}
	UserDataModule:UserDataModuleStruct;
	{attribute addProperty Name "<#ResultDataModule#>"}
	ResultDataModule:ResultDataModuleStruct;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>