<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ResultsControlModuleStruct" Id="{3f2be37f-7475-44d3-be71-cf9b5a5b1358}">
    <Declaration><![CDATA[TYPE ResultsControlModuleStruct :
STRUCT
	{attribute addProperty Name "<#TriggerEnable#>"}
	{attribute clr [IoBinding ("API^Term 4 (Results Control)^Subterm 1 (Results Control)^Outputs^Results Control Register^Enable Result Buffering", "Value")]}
	ResultBufferEnable :  BOOL;
	{attribute addProperty Name "<#TriggerEnable#>"}
	{attribute clr [IoBinding ("API^Term 4 (Results Control)^Subterm 1 (Results Control)^Outputs^Results Control Register^Results Acknowledge", "Value")]}
	ResultsAck : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>