<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="SoftEventControlModuleStruct" Id="{9f46e0fd-0fae-4e8a-8fdf-723bf9fa05bf}">
    <Declaration><![CDATA[TYPE SoftEventControlModuleStruct :
STRUCT
	{attribute addProperty Name "<#TrainCode#>"}
	{attribute clr [IoBinding ("API^Term 6 (Soft Event Control)^Subterm 1 (Soft Event Control)^Outputs^Soft Event Control Register^Train Code", "Value")]}
	TrainCode :BOOL; 			//Bit transition from 0 to 1 will cause the train code operation to be invoked.
	{attribute addProperty Name "<#TrainMatchString#>"}
	{attribute clr [IoBinding ("API^Term 6 (Soft Event Control)^Subterm 1 (Soft Event Control)^Outputs^Soft Event Control Register^Train Match String", "Value")]}
	TrainMatchString :BOOL;	//transition from 0 to 1 will cause the train match string operation to be invoked.
	{attribute addProperty Name "<#TrainFocus#>"}
	{attribute clr [IoBinding ("API^Term 6 (Soft Event Control)^Subterm 1 (Soft Event Control)^Outputs^Soft Event Control Register^Train Focus", "Value")]}
	TrainFocus :BOOL;			//transition from 0 to 1 will cause the train focus operation to be invoked.
	{attribute addProperty Name "<#TrainBrightness#>"}
	{attribute clr [IoBinding ("API^Term 6 (Soft Event Control)^Subterm 1 (Soft Event Control)^Outputs^Soft Event Control Register^Train Brightness", "Value")]}
	TrainBrightness :BOOL;	// transition from 0 to 1 will cause the train brightness operation to be invoked.
	{attribute addProperty Name "<#Untrain#>"}
	{attribute clr [IoBinding ("API^Term 6 (Soft Event Control)^Subterm 1 (Soft Event Control)^Outputs^Soft Event Control Register^Untrain", "Value")]}
	Untrain :BOOL;			// transition from 0 to 1 will cause the untrain operation to be invoked.
	{attribute addProperty Name "<#ExecuteDMCC#>"}
	{attribute clr [IoBinding ("API^Term 6 (Soft Event Control)^Subterm 1 (Soft Event Control)^Outputs^Soft Event Control Register^Execute DMCC", "Value")]}
	ExecuteDMCC :BOOL;		//transition from 0 to 1 will cause the DMCC operation to be invoked. Note that a valid DMCC command string must first be placed in "User Data" before invoking this event.
	{attribute addProperty Name "<#SetMatchString#>"}
	{attribute clr [IoBinding ("API^Term 6 (Soft Event Control)^Subterm 1 (Soft Event Control)^Outputs^Soft Event Control Register^Set Match String", "Value")]}
	SetMatchString :BOOL;		//transition from 0 to 1 will cause the set match string operation to be invoked. Note that match string data must first be placed in "User Data" before invoking this event.

	{attribute addProperty Name "<#TrainCodeAck#>"}
	{attribute clr [IoBinding ("API^Term 6 (Soft Event Control)^Subterm 1 (Soft Event Control)^Inputs^Soft Event Acknowledge Register^Train Code Acknowledge", "Value")]}
	TrainCodeAck :BOOL; 		//Indicates that the "Train Code" operation has completed
	{attribute addProperty Name "<#TrainMatchStringAck#>"}
	{attribute clr [IoBinding ("API^Term 6 (Soft Event Control)^Subterm 1 (Soft Event Control)^Inputs^Soft Event Acknowledge Register^Train Match String Acknowledge", "Value")]}
	TrainMatchStringAck :BOOL;//Indicates that the "Train Match String" operation has completed
	{attribute addProperty Name "<#TrainFocusAck#>"}
	{attribute clr [IoBinding ("API^Term 6 (Soft Event Control)^Subterm 1 (Soft Event Control)^Inputs^Soft Event Acknowledge Register^Train Focus Acknowledge", "Value")]}
	TrainFocusAck :BOOL; 		//Indicates that the "Train Focus" operation has completed
	{attribute addProperty Name "<#TrainBrightnessAck#>"}
	{attribute clr [IoBinding ("API^Term 6 (Soft Event Control)^Subterm 1 (Soft Event Control)^Inputs^Soft Event Acknowledge Register^Train Brightness Acknowledge", "Value")]}
	TrainBrightnessAck  :BOOL;//Indicates that the "Train Brightness" operation has completed
	{attribute addProperty Name "<#UntrainAck#>"}
	{attribute clr [IoBinding ("API^Term 6 (Soft Event Control)^Subterm 1 (Soft Event Control)^Inputs^Soft Event Acknowledge Register^Untrain Acknowledge", "Value")]}
	UntrainAck  :BOOL; 		//Indicates that the "Untrain" operation has completed
	{attribute addProperty Name "<#ExecuteDMCCAck#>"}
	{attribute clr [IoBinding ("API^Term 6 (Soft Event Control)^Subterm 1 (Soft Event Control)^Inputs^Soft Event Acknowledge Register^Execute DMCC Acknowledge", "Value")]}
	ExecuteDMCCAck :BOOL; 	//Indicates that the "Execute DMCC" operation has completed
	{attribute addProperty Name "<#SetMatchStringAck#>"}
	{attribute clr [IoBinding ("API^Term 6 (Soft Event Control)^Subterm 1 (Soft Event Control)^Inputs^Soft Event Acknowledge Register^Set Match String Acknowledge", "Value")]}
	SetMatchStringAck  :BOOL; //Indicates that the "Set Match String" operation has completed
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>